# minio-operator-ext

./: .gitignore  Dockerfile  Makefile  README.md  _config.yml  crds-2.1.1-rc.3.tgz  dev.template.py  go.mod  go.sum  index.md  index.yaml  operator-2.1.1-rc.2.tgz  operator-2.1.1-rc.4.tgz  operator-2.2.0-rc.1.tgz  pyproject.toml  test.yaml
.devcontainer/: Dockerfile  devcontainer.json  minio-operator-ext.code-workspace  post-create.sh
.github/workflows/: publish.yaml
chart/: Chart.yaml  README.md  values.yaml
chart/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  serviceaccount.yaml
charts/: README-crds.md  README-operator.md  crds-2.1.1-rc.2.tgz  crds-2.1.1-rc.4.tgz  crds-2.2.0-alpha.13+post-helm.tgz  crds-2.2.0-rc.1.tgz  crds-2.2.0-rc.6.tgz  crds-2.2.0-rc.7.tgz  crds-2.2.0-rc.8.tgz  crds-2.2.0.tgz  crds-2.2.1-rc.2.tgz  crds-2.2.1-rc.3.tgz  crds-2.2.1-rc.4.tgz  crds-2.2.2-alpha.2+generate-more-code.tgz  crds-2.2.2-alpha.3+generate-more-code.tgz  crds-2.2.2-rc.1.tgz  crds-2.2.2.tgz  crds-2.2.3-rc.1.tgz  crds-2.2.3-rc.2.tgz  crds-2.2.3.tgz  crds-2.3.0-alpha.1+support-migrations.tgz  crds-2.3.0-rc.1.tgz  crds-2.3.0-rc.2.tgz  crds-2.3.0-rc.3.tgz  crds-2.3.0.tgz  crds-2.3.1-rc.1.tgz  crds-3.0.0-rc.1.tgz  crds-3.0.0.tgz  crds-3.0.1-rc.1.tgz  crds-3.0.1.tgz  crds-3.1.0-rc.1.tgz  crds-3.1.0-rc.2.tgz  crds-3.1.0.tgz  crds-3.2.0-rc.1.tgz  crds-3.2.0-rc.2.tgz  crds-3.2.0-rc.3.tgz  crds-3.2.0.tgz  crds-3.2.1-rc.1.tgz  crds-3.2.1.tgz  crds-3.3.0-rc.1.tgz  (+38 more)
charts/crds/: Chart.yaml  README.md  values.yaml
dev/: codegen.go  codegen.sh  create-cluster.sh  dev.go.template  forward-ports.sh  generate-minio-manifests.sh  minio-operator.yaml  minio-tenant.yaml  openldap.yaml  use-ldap.sh
internal/: embed.go
manifests/: crds.yaml  example-deployment.yaml  example-resources.yaml  example_deployment.yaml  example_resources.yaml  rbac.yaml
minio_operator_ext/: cli.py  clients.py  logs.py  operator.py  resources.py
operator/: .gitignore  pyproject.toml
operator/local/: .gitignore  .template.env
operator/minio_operator_ext/: cli.py  operator.py
scripts/: dev-cluster.sh  dev.sh  docker.sh  helpers.py
(+107 files in other folders)
