[project]
name = "minio-operator-ext"
version = "0.0.0"
dependencies = [
    "click",
    "minio",
    "bfiola-operator-core==3.0.1",
    "python-dotenv",
    "uvloop"
]

[project.optional-dependencies]
dev = [
    "black"
]

[project.scripts]
minio-operator-ext = "minio_operator_ext.cli:main"

[tool.setuptools.packages.find]
include = ["minio_operator_ext"]
